# aw-server-rust

./: .codecov.yml  .gitignore  .gitmodules  .pre-commit-config.yaml  .travis.yml  Cargo.toml  Makefile  README.md  Rocket.toml  aw-server-rust.service  aw-server.service  compile-android.sh  install-ndk.sh  install.sh  set-default-target.sh  test.sh  todo.md
.cargo/: config
.github/: dependabot.yml
.github/workflows/: build.yml  dependabot-automerge.yml  lint.yml  rust.yml
aw-client-rust/: Cargo.toml  README.md
aw-client-rust/src/: blocking.rs  classes.rs  lib.rs  queries.rs  single_instance.rs
aw-client-rust/tests/: status_errors.rs  test.rs
aw-datastore/: Cargo.toml
aw-datastore/src/: compression.rs  datastore.rs  legacy_import.rs  lib.rs  mod.rs  privacy_filter.rs  worker.rs
aw-datastore/tests/: datastore.rs
aw-firebase-sync/: Cargo.toml  README.md  config.yaml
aw-firebase-sync/src/: main.rs
aw-models/: Cargo.toml
aw-models/examples/: schema.rs
aw-models/src/: bucket.rs  duration.rs  event.rs  export.rs  info.rs  key_value.rs  lib.rs  query.rs  settings.rs  timeinterval.rs  tryvec.rs  user.rs
aw-models/tests/: models.rs
aw-query/: Cargo.toml
aw-query/benches/: benchmark.rs
aw-query/src/: ast.rs  datatype.rs  functions.rs  interpret.rs  lexer.rs  lib.rs  parser.rs  preprocess.rs  varenv.rs
aw-query/tests/: query.rs
aw-server/: Cargo.toml  build.rs
aw-server/asset-resolver/: Cargo.toml
aw-server/asset-resolver/src/: lib.rs
aw-server/src/: config.rs  device_id.rs  dirs.rs  lib.rs  logging.rs  macros.rs  main.rs  privacy_filter.rs
aw-server/src/android/: mod.rs
aw-server/src/endpoints/: apikey.rs  auth.rs  bucket.rs  cors.rs  cors_config.rs  export.rs  hostcheck.rs  import.rs  key_value.rs  mod.rs  query.rs  settings.rs  user.rs  util.rs
aw-server/tests/: api.rs  macros.rs
aw-sync/: Cargo.toml  README.md  test-import-sync.sh  test-server.sh  test-sync-pull.sh  test-sync-push.sh  test-sync.sh
aw-sync-rust/: Cargo.toml
aw-sync-rust/src/: lib.rs  main.rs
aw-sync-rust/tests/: sync.rs
aw-sync/src/: accessmethod.rs  android.rs  dirs.rs  lib.rs  main.rs  sync.rs  sync_wrapper.rs  util.rs
aw-sync/tests/: sync.rs
aw-transform/: Cargo.toml
aw-transform/benches/: bench.rs
aw-transform/src/: chunk.rs  classify.rs  filter_keyvals.rs  filter_period.rs  find_bucket.rs  flood.rs  heartbeat.rs  lib.rs  merge.rs  period_union.rs  privacy_filter.rs  sort.rs  split_url.rs  union.rs  union_no_overlap.rs
python/: aw_server_rust.py  pyproject.toml
scripts/: copy_rust_binaries.py  create-cargo-config.sh  test-compile-android-cwd.sh
src/: android.rs  config.rs  dirs.rs  lib.rs  logging.rs  macros.rs  main.rs  sync.rs  sync_main.rs
src/android/: logcat.rs  mod.rs
src/datastore/: datastore.rs  legacy_import.rs  mod.rs  worker.rs
src/datastore/crossbeam_requests/: mod.rs
src/endpoints/: bucket.rs  cors.rs  export.rs  import.rs  mod.rs  query.rs  user.rs
src/models/: bucket.rs  duration.rs  event.rs  mod.rs  query.rs  timeinterval.rs
src/query/: datatype.rs  functions.rs  mod.rs
src/sync/: main.rs  mod.rs
src/transform/: classify.rs  mod.rs
tests/: api.rs  datastore.rs  macros.rs  models.rs  query.rs  sync.rs  test.rs  transform.rs
