[package]
name = "aw_server"
version = "0.1.0"
authors = ["Johan Bjäreholt <johan@bjareho.lt>", "Erik Bjäreholt <erik@bjareho.lt>"]

[dependencies]
rocket = "0.4"
rocket_contrib = { version = "*", default-features = false, features = ["json"] }
rocket_cors = "0.4.0"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.14", features = ["chrono", "serde_json", "bundled"]  }
mpsc_requests = "0.2"
plex = "0.2.3"
appdirs = "0.2.0"
lazy_static = "1.2"

[lib]
crate-type = ["lib", "cdylib"]
path = "src/lib.rs"

[[bin]]
name = "aw_server"
path = "src/main.rs"

[target.'cfg(target_os="android")'.dependencies]
jni = { version = "0.5", default-features = false }
