[package]
name = "aw_server"
version = "0.1.0"
authors = ["Johan Bjäreholt <johan@bjareho.lt>", "Erik Bjäreholt <erik@bjareho.lt>"]
edition = "2018"

[lib]
crate-type = ["lib", "cdylib"]
path = "src/lib.rs"

[[bin]]
name = "aw-server-rust"
path = "src/main.rs"

[dependencies]
rocket = "0.4"
rocket_contrib = { version = "*", default-features = false, features = ["json"] }
rocket_cors = "0.5.0-beta-1"
multipart = "0.16"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.18", features = ["chrono", "serde_json", "bundled"]  }
crossbeam_requests = "0.2"
plex = "0.2.3"
appdirs = "0.2.0"
lazy_static = "1.2"
log = "0.4"
fern = { version = "0.5", features = ["colored"] }
toml = "0.5"

[target.'cfg(target_os="android")'.dependencies]
jni = { version = "0.5", default-features = false }
libc = "0.2"
