[package]
name = "aw-client-rust"
version = "0.1.0"
edition = "2021"
authors = ["Johan Bjäreholt <johan@bjareho.lt>"]

[dependencies]
reqwest = { version = "0.11", features = ["json", "blocking"] }
gethostname = "0.4"
serde = { version = "1.0", features = ["derive"] }
phf = { version = "0.11", features = ["macros"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
aw-models = { path = "../aw-models" }
tokio = { version = "1.28.2", features = ["rt"] }
rand = "0.9"
log = "0.4"
libc = "0.2"
thiserror = "1.0" 
dirs = "6.0"
fs4 = { version = "0.13", features = ["sync"] }

[dev-dependencies]
aw-datastore = { path = "../aw-datastore" }
aw-server = { path = "../aw-server", default-features = false, features=[] }
rocket = "0.5.0-rc.1"
tokio-test = "*"
