[package]
name = "aw-datastore"
version = "0.1.0"
authors = ["Johan Bjäreholt <johan@bjareho.lt>"]
edition = "2018"

[features]
default = [] # no features by default
legacy_import_tests = []

[dependencies]
appdirs = "0.2"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.21", features = ["chrono", "serde_json", "bundled"]  }
mpsc_requests = "0.3"
log = "0.4"

aw-models = { path = "../aw-models" }
aw-transform = { path = "../aw-transform" }
