[package]
name = "aw-firebase-sync"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.35"
tokio = { version = "1", features = ["full"] }
aw-client-rust = { path = "../aw-client-rust" }
aw-models = { path = "../aw-models" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.70"
serde_yaml = "0.8.18"
reqwest = { version = "0.12.4" , features = ["full"] }
dirs = "5.0.1"