[package]
name = "aw-query"
version = "0.1.0"
authors = ["Johan Bjäreholt <johan@bjareho.lt>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
plex = "0.3.0"
log = "0.4"
fancy-regex = "0.12.0"
aw-datastore = { path = "../aw-datastore" }
aw-models = { path = "../aw-models" }
aw-transform = { path = "../aw-transform" }

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "benchmark"
harness = false
