[package]
name = "aw-server"
version = "0.13.1"
authors = ["Johan Bjäreholt <johan@bjareho.lt>", "Erik Bjäreholt <erik@bjareho.lt>"]
edition = "2021"

[lib]
name = "aw_server"
crate-type = ["lib", "cdylib"]
path = "src/lib.rs"

[[bin]]
name = "aw-server"
path = "src/main.rs"

[dependencies]
rocket = { version = "0.5.0", features = ["json"] }
rocket_cors = { version = "0.6.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
appdirs = "0.2.0"
lazy_static = "1.4"
log = "0.4"
fern = { version = "0.6", features = ["colored"] }
toml = "0.8"
gethostname = "0.4"
uuid = { version = "1.3", features = ["serde", "v4"] }
clap = { version = "4.1", features = ["derive", "cargo"] }
log-panics = { version = "2", features = ["with-backtrace"]}
rust-embed = { version = "8.0.0", features = ["interpolate-folder-path", "debug-embed"] }

aw-datastore = { path = "../aw-datastore" }
aw-models = { path = "../aw-models" }
aw-transform = { path = "../aw-transform" }
aw-query = { path = "../aw-query" }

[target.'cfg(target_os="linux")'.dependencies]
sd-notify = "0.4.2"

[target.'cfg(all(target_os="linux", target_arch="x86"))'.dependencies]
jemallocator = "0.5.0"

[target.'cfg(target_os="android")'.dependencies]
jni = { version = "0.20", default-features = false }
libc = "0.2"
android_logger = "0.13"
openssl-sys = { version = "0.9.82", features = ["vendored"]}
