[package]
name = "aw_sync"
version = "0.1.0"
authors = ["Erik Bjäreholt <erik@bjareho.lt>"]
edition = "2018"

[lib]
name = "aw_sync"
path = "src/lib.rs"

[[bin]]
name = "aw-sync-rust"
path = "src/main.rs"

[dependencies]
aw_server = { path = "../" }
aw_client_rust = { path = "../aw-client-rust" }
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1.0"
