[package]
name = "aw-sync"
version = "0.1.0"
authors = ["Erik Bjäreholt <erik@bjareho.lt>"]
edition = "2021"

[lib]
name = "aw_sync"
path = "src/lib.rs"

[[bin]]
name = "aw-sync-rust"
path = "src/main.rs"

[dependencies]
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }
serde = "1.0"
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "blocking"] }
clap = { version = "3.0.0-beta.5", features = ["derive"] }
aw-server = { path = "../aw-server" }
aw-models = { path = "../aw-models" }
aw-datastore = { path = "../aw-datastore" }
aw-client-rust = { path = "../aw-client-rust" }
