[package]
name = "aw-sync"
version = "0.1.0"
authors = ["Erik Bjäreholt <erik@bjareho.lt>"]
edition = "2021"

[lib]
name = "aw_sync"
path = "src/lib.rs"

[[bin]]
name = "aw-sync"
path = "src/main.rs"

[dependencies]
log = "0.4"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
serde = "1.0"
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "blocking"] }
clap = { version = "4.1", features = ["derive"] }
appdirs = "0.2.0"
dirs = "5.0.1"
gethostname = "0.4.3"

aw-server = { path = "../aw-server" }
aw-models = { path = "../aw-models" }
aw-datastore = { path = "../aw-datastore" }
aw-client-rust = { path = "../aw-client-rust" }

[target.'cfg(target_os="linux")'.dependencies]
openssl = { version = "0.10.64", features = ["vendored"] }  # https://github.com/ActivityWatch/aw-server-rust/issues/478
